feat(upload-cccd): implement method upload